--- a/RealTimeDataBinding/packages.config
+++ b/RealTimeDataBinding/packages.config
@@ -10,10 +10,18 @@
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RequireJS" version="2.1.15" targetFramework="net45" />
   <package id="RequireJS.Text" version="2.0.7" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
