--- a/RealTimeDataBinding/packages.config
+++ b/RealTimeDataBinding/packages.config
@@ -24,6 +24,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RequireJS" version="2.1.15" targetFramework="net45" />
   <package id="RequireJS.Text" version="2.0.7" targetFramework="net45" />
+  <package id="underscore.js" version="1.7.0" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
