--- a/RealTimeDataBinding/packages.config
+++ b/RealTimeDataBinding/packages.config
@@ -7,6 +7,7 @@
   <package id="Durandal.Transitions" version="2.1.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jQuery.Color" version="2.1.2" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
